<resources>

    <string name="app_name">Marché Milaf</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Menu item texts -->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="add_prod">add</string>
    <string name="action_cart">Cart</string>
    <string name="action_notifications">Notifications</string>

    <string name="item_1">Electromenager</string>
    <string name="item_2">Informatique</string>
    <string name="item_3">Mobile</string>
    <string name="item_4">Chaussure</string>
    <string name="item_5">Vetements</string>
    <string name="item_6">More</string>

    <string name="my_profile">My Profile</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">votre panier</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_account">My Account</string>

    <string name="help_support">Help \u0026 Support</string>
    <string name="contact_us">About</string>
    <string name="terms_conditions">Terms \u0026 Conditions</string>
    <string name="help_center">Centre d aide</string>

    <string name="search_hint">Search for Products, Brands and More</string>


    <!--Intro slider texts -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GO HOME</string>

    <string name="slide_1_title">Welcome</string>
    <string name="slide_1_desc">Enter your description here..
    </string>

    <string name="slide_2_title">Welcome</string>
    <string name="slide_2_desc">Enter your description here..</string>

    <string name="slide_3_title">Hello</string>
    <string name="slide_3_desc">Enter your description here..</string>

    <string name="slide_4_title">Hello</string>
    <string name="slide_4_desc">Enter your description here.</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome
        slider -> clear data
    </string>
    <string name="play_again">Once Again</string>







    <string name="app_title_main">Jade Chat</string>

    <string name="app_title_settings">Jade  Settings</string>

    <string name="app_title_chat">Jade Chat Room</string>

    <string name="app_title_participants">Jade Chat Participants</string>

    <string name="label_nick">Enter Nickname</string>

    <string name="label_host">Host</string>

    <string name="label_port">Port</string>

    <string name="button_login"> chat! </string>

    <string name="button_send">send!</string>

    <string name="button_use"> use </string>

    <string name="menu_settings">settings</string>

    <string name="menu_exit">exit</string>

    <string name="menu_participants">participants</string>

    <string name="menu_clear">clear</string>

    <string name="msg_connecting_to">Connecting to</string>

    <string name="msg_nickname_in_use">Nickname already in use!</string>

    <string name="msg_nickname_not_valid">Invalid nickname!</string>

    <string name="msg_unexpected">Unexpected error!</string>

    <string name="msg_interface_exc">Internal error!</string>

    <string name="msg_controller_exc">Server error!</string>



    <string name="app_nam">Login and SignUp ScreenDesign Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_setting">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Montrer le mot de passe</string>
    <string name="hide_pwd">Masquer le mot de passe</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">INSCRIRE</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="cartpost">code de cart post</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_condition">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">S INSCRIRE</string>
    <string name="already_user">Connectez-vous ici.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
</resources>
