<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="CATÉGORIES">
        <menu>
        <item
            android:id="@+id/nav_item1"
            android:icon="@drawable/kitchen"
            android:title="@string/item_1" />
        <item
            android:id="@+id/nav_item2"
            android:icon="@drawable/computer"
            android:title="@string/item_2" />

        <item
            android:id="@+id/nav_item3"
            android:icon="@drawable/smartphone"

            android:title="@string/item_3" />
        <item
            android:id="@+id/nav_item4"
            android:icon="@drawable/footwear"
            android:title="@string/item_4" />
        <item
            android:id="@+id/nav_item5"
            android:icon="@drawable/dresss"
            android:title="@string/item_5" />
        <item
            android:id="@+id/nav_item6"
            android:icon="@drawable/ic_more_black_24dp"
            android:title="@string/item_6" />
        </menu>
    </item>

    <item android:title="Votre compte">
        <menu>



            <item
                android:id="@+id/my_Home"
                android:icon="@drawable/home"
                android:title="Accueil" />

            <item
                android:id="@+id/my_account"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="Votre compte" />

            <item
                android:id="@+id/my_cart"
                android:icon="@drawable/ic_shopping_cart_black_24dp"
                android:title="Votre panier" />
            <item
                android:id="@+id/my_demande"
                android:icon="@drawable/checklist"
                android:title="Vos commandes" />


        </menu>
    </item>


<item android:title="votre magasin"
    android:id="@+id/l"
    >
    <menu>
        <item
            android:id="@+id/addMarketing"
            android:icon="@drawable/market"
            android:title="Créer magasin"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/My_Articlet"
            android:icon="@drawable/list"
            android:title="Vos produits"
            />

        <item
            android:id="@+id/vent"
            android:icon="@drawable/checklist"
            android:title="Vos commandes"
            />
        <item
            android:id="@+id/addArticle"
            android:icon="@drawable/checklist"
            android:title="Ajouter produit"
            />
    </menu>
</item>

    <item android:title="@string/help_support">
        <menu>
            <item
                android:id="@+id/contact_us"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/terms_conditions"
                android:title="@string/terms_conditions" />
            <item
                android:id="@+id/help_center"
                android:title="@string/help_center" />
        </menu>
    </item>
</menu>
