<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="4"
            android:visibility="gone" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:padding="10dp"
            android:text="Informations pour livraison"
            android:textColor="#f0ad4e"
            android:textSize="18sp"
            android:textStyle="bold"
            />

    </LinearLayout>


    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />



    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />




    <EditText
        android:id="@+id/mobileNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"

        android:drawableLeft="@drawable/phone"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/mobileNumber"
        android:inputType="phone"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/black"

        android:textSize="16sp" >
        <requestFocus></requestFocus>
    </EditText>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <EditText
        android:id="@+id/location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"

        android:drawableLeft="@drawable/location"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/location"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/black"

        android:textSize="16sp" >
        <requestFocus></requestFocus>
    </EditText>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />
    <TextView
        android:id="@+id/infoU"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:padding="10dp"
        android:text="Informations pour payment"
        android:textColor="#f0ad4e"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/cart"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"

        android:drawableLeft="@drawable/creditcard"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="Credit Card"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/black"

        android:textSize="16sp" >
        <requestFocus></requestFocus>
    </EditText>


    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <EditText
        android:id="@+id/cartid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"

        android:drawableLeft="@drawable/key"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="Id"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/black"

        android:textSize="16sp" >
        <requestFocus></requestFocus>
    </EditText>

    <CheckBox
        android:id="@+id/terms_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/terms_conditions"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/loginbutton_selector"
        android:padding="3dp"
        android:text="Commander"
        android:textColor="#f0ad4e"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"

         />


</LinearLayout>